--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: Actions Worflow
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
