--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,9 @@
 name: Actions Worflow
 
 on:
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
   push:
     branches:
       - master
