--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,7 @@ on:
   #  - cron: "0/6 * * * *"
   push:
     branches:
-      - master
+      - main
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
